# iota

./: .clippy.toml  .eslintrc.js  .gitattributes  .gitignore  .gitignore.rename  .license_template  .lintstagedrc.json  .lycheeignore  .prettierignore  .typos.toml  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE-docs  README.md  RELEASES.md  RUST_CONVENTIONS.md  SECURITY.md  binary-build-list.json  crate-hashes.json  crates.js  deny.toml  dprint.json  flake.nix  graphql.config.ts  help.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  result  rustfmt.toml  search-index.js  settings.html  src-files.js  turbo.json
consensus/config/: Cargo.toml
consensus/config/src/: committee.rs  crypto.rs  lib.rs  parameters.rs  test_committee.rs
consensus/config/tests/: committee_test.rs  parameters_test.rs
consensus/core/: Cargo.toml  build.rs
consensus/core/src/: authority_node.rs  authority_service.rs  base_committer.rs  block.rs  block_manager.rs  block_verifier.rs  broadcaster.rs  commit.rs  commit_consumer.rs  commit_observer.rs  commit_syncer.rs  commit_vote_monitor.rs  context.rs  core.rs  core_thread.rs  dag_state.rs  error.rs  leader_schedule.rs  leader_scoring.rs  leader_scoring_strategy.rs  leader_timeout.rs  lib.rs  linearizer.rs  metrics.rs  stake_aggregator.rs  subscriber.rs  synchronizer.rs  test_dag.rs  test_dag_builder.rs  test_dag_parser.rs  threshold_clock.rs  transaction.rs  universal_committer.rs
crates/anemo-benchmark/: Cargo.toml  README.md  build.rs
crates/anemo-benchmark/src/: lib.rs  main.rs  server.rs
crates/data-transform/: Cargo.toml  README.md
crates/data-transform/src/: lib.rs  main.rs  models.rs  schema.rs
crates/iota-adapter-transactional-tests/: Cargo.toml
crates/iota-adapter-transactional-tests/tests/: tests.rs
crates/iota-analytics-indexer/: Cargo.toml
crates/iota-analytics-indexer/src/: analytics_metrics.rs  analytics_processor.rs  errors.rs  lib.rs  main.rs  package_store.rs  tables.rs
crates/iota-archival/: Cargo.toml
crates/iota-archival/src/: lib.rs  reader.rs  tests.rs  writer.rs
crates/iota-authority-aggregation/: Cargo.toml
crates/iota-authority-aggregation/src/: lib.rs
crates/iota-aws-orchestrator/: Cargo.toml  README.md
crates/iota-aws-orchestrator/assets/: grafana-dashboard-narwhal-only.json  grafana-dashboard-narwhal.json  plot.py  settings-template.json
crates/iota-aws-orchestrator/src/: benchmark.rs  display.rs  error.rs  faults.rs  logs.rs  main.rs  measurement.rs  monitor.rs  orchestrator.rs  settings.rs  ssh.rs  testbed.rs
crates/iota-benchmark/: Cargo.toml
crates/iota-benchmark/src/: bank.rs  benchmark_setup.rs  embedded_reconfig_observer.rs  fullnode_reconfig_observer.rs  in_memory_wallet.rs  lib.rs  options.rs  system_state_observer.rs  util.rs
crates/iota-benchmark/tests/: simtest.rs
crates/iota-bridge/: Cargo.toml  build.rs
crates/iota-bridge-cli/: Cargo.toml
crates/iota-bridge-cli/src/: lib.rs  main.rs
crates/iota-bridge-indexer/: Cargo.toml  config.yaml  diesel.toml
crates/iota-bridge-indexer/src/: config.rs  eth_bridge_indexer.rs  iota_bridge_indexer.rs  iota_transaction_handler.rs  iota_transaction_queries.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres_manager.rs  schema.rs  types.rs
crates/iota-bridge/abi/: bridge_config.json  iota_bridge.json
crates/iota-bridge/src/: abi.rs  action_executor.rs  config.rs  crypto.rs  encoding.rs  error.rs  eth_client.rs  eth_mock_provider.rs  eth_syncer.rs  eth_transaction_builder.rs  events.rs  iota_client.rs  iota_mock_client.rs  iota_syncer.rs  iota_transaction_builder.rs  lib.rs  main.rs  metered_eth_provider.rs  metrics.rs  monitor.rs  node.rs  orchestrator.rs  storage.rs  test_utils.rs  types.rs  utils.rs
crates/iota-cluster-test/: Cargo.toml
crates/iota-cluster-test/src/: cluster.rs  config.rs  faucet.rs  helper.rs  lib.rs  main.rs  test_case.rs  wallet_client.rs
crates/iota-cluster-test/tests/: local_cluster_test.rs
crates/iota-common/: Cargo.toml
crates/iota-common/src/: authority_aggregation.rs  lib.rs
crates/iota-config/: Cargo.toml
crates/iota-config/data/: fullnode-template-with-path.yaml  fullnode-template.yaml
crates/iota-config/src/: certificate_deny_config.rs  genesis.rs  lib.rs  local_ip_utils.rs  migration_transaction_data.rs  migration_tx_data.rs  node.rs  node_config_metrics.rs  object_storage_config.rs  p2p.rs  snapshot.rs  test_gateway.yml  transaction_deny_config.rs
crates/iota-core/: Cargo.toml
crates/iota-core/benches/: batch_verification_bench.rs  verified_cert_cache_bench.rs
crates/iota-core/src/: authority.rs  authority_aggregator.rs  authority_client.rs  authority_server.rs  connection_monitor.rs  consensus_adapter.rs  consensus_handler.rs  consensus_throughput_calculator.rs  consensus_validator.rs  db_checkpoint_handler.rs  execution_cache.rs  execution_driver.rs  generate_format.rs  lib.rs  metrics.rs  mock_consensus.rs  module_cache_metrics.rs  mysticeti_adapter.rs  overload_monitor.rs  post_consensus_tx_reorder.rs  rest_index.rs  runtime.rs  safe_client.rs  scoring_decision.rs  signature_verifier.rs  stake_aggregator.rs  state_accumulator.rs  storage.rs  streamer.rs  subscription_handler.rs  test_authority_clients.rs  test_utils.rs  transaction_input_loader.rs  transaction_manager.rs  (+5 more)
crates/iota-cost/: Cargo.toml  troubleshooting.md
crates/iota-data-ingestion/: Cargo.toml
crates/iota-data-ingestion-core/: Cargo.toml
crates/iota-e2e-tests/: Cargo.toml
crates/iota-faucet/: Cargo.toml
crates/iota-framework/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  published_api.txt
crates/iota-framework-snapshot/: Cargo.toml  README.txt  manifest.json
crates/iota-framework-tests/: Cargo.toml
crates/iota-genesis-builder/: Cargo.toml
crates/iota-genesis-common/: Cargo.toml
crates/iota-graphql-e2e-tests/: Cargo.toml  README.md
iota-execution/: Cargo.toml  README.md
iota-execution/cut/: Cargo.toml  README.md
iota-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  tests.rs  v0.rs  v1.rs  v2.rs  verifier.rs
(+19969 files in other folders)
